# Code-reviewer

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  rq_worker.py
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/github/: client.py  import_parser.py
backend/app/llm/: claude_client.py  review_graph.py
backend/app/models/: __init__.py  pull_request.py  repo.py  review.py  review_comment.py  user.py
backend/app/repositories/: __init__.py  pr_repo.py  repo_repo.py  review_repo.py  user_repo.py
backend/app/routers/: auth.py  prs.py  repos.py  webhooks.py
backend/app/schemas/: __init__.py  auth.py  pr.py  repo.py  review.py  webhook.py
backend/app/services/: auth_service.py  repo_service.py  review_service.py  webhook_service.py
backend/app/workers/: review_worker.py
backend/tests/: conftest.py  test_auth.py  test_review_pipeline.py  test_webhooks.py
frontend/: .gitignore  README.md  Reviewly.html  app.jsx  components.jsx  package-lock.json  package.json  screens-1.jsx  screens-2.jsx  screens-3.jsx  styles.css  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/components/: providers.tsx
frontend/components/layout/: sidebar.tsx  topbar.tsx
frontend/components/pr/: diff-viewer.tsx  file-tree.tsx  files-tab.tsx  pr-row.tsx  suggestions-tab.tsx  (+2 more)
frontend/contexts/: sidebar-context.tsx  theme-context.tsx
frontend/lib/: data.ts  suggestions.tsx  types.ts
(+14 files in other folders)
